<resources>
    <string name="app_name">DipNetoCom</string>
    <!-- icon -->
    <string name="attachment">Attachment</string>
    <string name="avatar">Avatar</string>
    <string name="coordinates">Coordinates</string>
    <string name="like">Like</string>
    <string name="menu">Menu</string>
    <string name="share">Share</string>
    <string name="viewing">Viewing</string>
    <!-- login/reg -->
    <string name="add_avatar">Add avatar</string>
    <string name="anonymous">Anonymous</string>
    <string name="clear_avatar">Clear avatar</string>
    <string name="continue_as_a_guest">Continue as a guest</string>
    <string name="empty_field">It is necessary to fill in all fields</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="invalid_login_or_password">Invalid login or password</string>
    <string name="is_blank">Login or password is blank</string>
    <string name="login">Login</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="logged_out_of_your_account">You have logged out of your account</string>
    <string name="login_exit">You are login exit</string>
    <string name="login_line">Already registered? <u>Log in</u></string>
    <string name="log_in_with_a_password">Log in with a password</string>
    <string name="log_in_to_account">Log in to account</string>
    <string name="log_out_of_your_account">Log out of your account?</string>
    <string name="name">Name</string>
    <string name="match_passwords">Passwords must match</string>
    <string name="password">Password</string>
    <string name="please_choose_avatar">Please choose avatar</string>
    <string name="please_log_in_to_your_account">Please log in to your account</string>
    <string name="repeat_password">Repeat password</string>
    <string name="registration">Registration</string>
    <string name="registration_line"><u>Registration</u></string>
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="unknown">Unknown</string>
    <!-- fragments -->
    <string name="add_post">Add post</string>
    <string name="camera">Camera</string>
    <string name="create_events">Create event</string>
    <string name="create_posts">Create post</string>
    <string name="create_jobs">Create job</string>
    <string name="empty_date">You need to select the date</string>
    <string name="empty_datetime">You need to select the date and time</string>
    <string name="events">Events</string>
    <string name="gallery">Gallery</string>
    <string name="image">Image</string>
    <string name="jobs">Jobs</string>
    <string name="my_wall">My Wall</string>
    <string name="photo">Photo</string>
    <string name="photo_error">Photo error</string>
    <string name="posts">Posts</string>
    <string name="type_event">Type event</string>
    <string name="user_avatar">User avatar</string>
    <string name="users_wall">Wall of User</string>
    <string name="video">Video</string>
    <!-- jobs -->
    <string name="add_jobs">Add jobs</string>
    <string name="company_name">Company name</string>
    <string name="empty_jobs">Empty jobs</string>
    <string name="job_name">Job Name</string>
    <string name="job_position">Job position</string>
    <string name="job_start">Job start</string>
    <string name="job_finish">Job finish</string>
    <string name="link_to_company">Link to company</string>
    <string name="link_to_job">Link to Job</string>
    <!-- actions -->
    <string name="add_date">Add date</string>
    <string name="add_event">Add event</string>
    <string name="add_link">Add link</string>
    <string name="add_note">Add note</string>
    <string name="back">Back</string>
    <string name="chooser_share_post">Share post</string>
    <string name="create">Create</string>
    <string name="clear">Clear</string>
    <string name="edit">Edit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="remove">Remove</string>
    <string name="retry_loading">Retry</string>
    <!-- adapter -->
    <string name="unknown_item_type">Unknown item type</string>
    <string name="unknown_view_type">Unknown view type</string>
    <!-- other -->
    <string name="dash">-</string>
    <string name="sample_date">01.01.2000</string>
    <string name="sample_time">00:00</string>
    <string name="float_action_button">Float action button</string>
    <!-- map -->
    <string name="latitude">latitude:</string>
    <string name="latitude_and_longitude">latitude: %s\nlongitude: %s</string>
    <string name="longitude">longitude:</string>
    <string name="permission_request">Location permission required</string>
    <string name="place_pin">Place pin</string>
    <string name="user_location">User location</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_place">Add place</string>

</resources>