<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/common_spacing_16"
    tools:context=".activity.auth.RegistrationFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_reg_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing_16"
        app:layout_constraintBottom_toTopOf="@id/login_reg_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/PRIMARY_50"
            android:hint="@string/name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_reg_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing_16"
        app:layout_constraintBottom_toTopOf="@id/password_reg_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_reg"
            android:background="@color/PRIMARY_50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_reg_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing_16"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_reg"
            android:layout_width="match_parent"
            android:background="@color/PRIMARY_50"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeat_password_reg_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing_16"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/password_reg_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeat_password_reg"
            android:layout_width="match_parent"
            android:background="@color/PRIMARY_50"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing_16"
        android:text="@string/clear"
        app:icon="@drawable/clear_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/registration_button"
        app:layout_constraintTop_toBottomOf="@id/repeat_password_reg_layout" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/registration_button"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/common_spacing_16"
        android:layout_height="wrap_content"
        app:icon="@drawable/registration_24"
        android:text="@string/registration"
        app:layout_constraintEnd_toEndOf="@id/repeat_password_reg_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repeat_password_reg_layout" />

    <TextView
        android:id="@+id/login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing_16"
        android:textColor="@color/PRIMARY_600"
        android:textSize="18sp"
        android:autoLink="all"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clear"
        android:text="@string/login_line" />


</androidx.constraintlayout.widget.ConstraintLayout>