<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/common_spacing_16"
    tools:context=".activity.auth.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_log_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing_16"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimarySurface"
            android:hint="@string/login"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_log_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing_16"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/login_log_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimarySurface"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing_16"
        android:text="@string/log_in_to_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/clear"
        app:layout_constraintTop_toBottomOf="@+id/password_log_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing_16"
        android:layout_marginTop="@dimen/common_spacing_16"
        android:text="@string/clear"
        app:strokeColor="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/login_button"
        app:layout_constraintTop_toBottomOf="@id/password_log_layout" />

    <TextView
        android:id="@+id/registration_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing_16"
        android:autoLink="all"
        android:text="@string/registration_line"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clear" />

</androidx.constraintlayout.widget.ConstraintLayout>