<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/common_spacing_16"
    android:background="@drawable/background_line"
    tools:context=".activity.edit.NewJobFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/job_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing_16"
        app:layout_constraintBottom_toTopOf="@id/job_position_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_job_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/PRIMARY_50"
            android:hint="@string/job_name"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/job_position_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing_16"
        app:layout_constraintBottom_toTopOf="@id/job_start_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_job_position"
            android:background="@color/PRIMARY_50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/job_position"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/job_start_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/calendar_24"
        android:layout_margin="@dimen/common_spacing_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_job_start"
            android:layout_width="match_parent"
            android:background="@color/PRIMARY_50"
            android:layout_height="wrap_content"
            android:hint="@string/job_start"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/job_finish_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/calendar_24"
        android:layout_margin="@dimen/common_spacing_16"
        app:layout_constraintTop_toBottomOf="@id/job_start_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_job_finish"
            android:layout_width="match_parent"
            android:background="@color/PRIMARY_50"
            android:layout_height="wrap_content"
            android:hint="@string/job_finish"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/job_link_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/add_link_24"
        android:layout_margin="@dimen/common_spacing_16"
        app:layout_constraintTop_toBottomOf="@id/job_finish_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_job_link"
            android:layout_width="match_parent"
            android:background="@color/PRIMARY_50"
            android:layout_height="wrap_content"
            android:hint="@string/link_to_job"
            android:inputType="textWebEditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/common_spacing_16"
        android:layout_height="wrap_content"
        app:icon="@drawable/create_24"
        android:text="@string/create"
        app:layout_constraintEnd_toEndOf="@id/job_link_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/job_link_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing_16"
        android:text="@string/clear"
        app:icon="@drawable/clear_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@id/job_link_layout"
        app:layout_constraintTop_toBottomOf="@id/job_link_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>