<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/checkbox_padding_start_8"
    android:layout_marginBottom="@dimen/checkbox_padding_start_8">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_line"
        android:padding="@dimen/common_spacing_16">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/posts_avatar_size_48"
            android:layout_height="@dimen/posts_avatar_size_48"
            android:layout_marginBottom="@dimen/common_spacing_16"
            android:background="@drawable/background_line"
            android:contentDescription="@string/avatar"
            android:scaleType="fitCenter"
            android:src="@drawable/account_circle_24"
            app:layout_constraintBottom_toBottomOf="@id/header1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/play_music"
            style="@style/Widget.AppTheme.PlayPauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/footer" />

        <TextView
            android:id="@+id/music_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/play_music"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/play_music"
            app:layout_constraintTop_toTopOf="@id/play_music" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/music_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="play_music, music_title" />

        <VideoView
            android:id="@+id/video_attachment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/attachment_size_200"
            app:layout_constraintTop_toBottomOf="@id/play_music" />

        <ImageView
            android:id="@+id/play_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:accessibilityTraversalAfter="@id/video_attachment"
            android:contentDescription="@string/video"
            android:src="@drawable/play_48"
            app:layout_constraintBottom_toBottomOf="@id/video_attachment"
            app:layout_constraintEnd_toEndOf="@id/video_attachment"
            app:layout_constraintStart_toStartOf="@id/video_attachment"
            app:layout_constraintTop_toTopOf="@id/video_attachment" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/video_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="play_video, video_attachment" />

        <ImageView
            android:id="@+id/image_attachment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/attachment_size_200"
            android:layout_marginTop="@dimen/common_spacing_16"
            android:contentDescription="@string/attachment"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/video_attachment" />

        <LinearLayout
            android:id="@+id/author_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/avatar"
            app:layout_constraintEnd_toStartOf="@id/menu"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toTopOf="@id/avatar">

            <TextView
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing_16"
                android:layout_marginEnd="@dimen/common_spacing_16"
                android:ellipsize="end"
                android:singleLine="true"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/avatar"
                app:layout_constraintTop_toTopOf="@id/avatar"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="@tools:sample/full_names" />

            <TextView
                android:id="@+id/job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing_16"
                android:ellipsize="end"
                android:singleLine="true"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/published"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing_16"
                android:ellipsize="end"
                android:singleLine="true"
                android:textStyle="italic"
                tools:text="@tools:sample/date/ddmmyy" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_spacing_16"
            android:contentDescription="@string/menu"
            app:icon="@drawable/menu_vert_24"
            app:iconGravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/header1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="avatar,author_info,menu" />

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:lineSpacingMultiplier="1.5"
            android:paddingTop="@dimen/common_spacing_16"
            android:paddingBottom="@dimen/common_spacing_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header1"
            tools:text="@tools:sample/lorem[50]/random" />


        <TextView
            android:id="@+id/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:drawablePadding="@dimen/checkbox_padding_start_8"
            android:textColorLink="?attr/colorPrimaryVariant"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/link_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content"
            tools:text="@tools:sample/date/ddmmyy" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="link" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/like"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/checkbox_padding_start_8"
            android:checkable="true"
            android:contentDescription="@string/like"
            app:icon="@drawable/sl_like_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_attachment"
            tools:text="@tools:sample/us_zipcodes" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/checkbox_padding_start_8"
            android:contentDescription="@string/share"
            app:icon="@drawable/share_24"
            app:layout_constraintStart_toEndOf="@id/like"
            app:layout_constraintTop_toBottomOf="@id/image_attachment" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/coordinates"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/checkbox_padding_start_8"
            android:contentDescription="@string/coordinates"
            android:visibility="gone"
            app:icon="@drawable/locate_24"
            app:layout_constraintStart_toEndOf="@id/share"
            app:layout_constraintTop_toBottomOf="@id/image_attachment" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/join"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/checkbox_padding_start_8"
            android:contentDescription="@string/viewing"
            android:visibility="invisible"
            app:icon="@drawable/visibility_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_attachment" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>